# homepage

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  babel.cfg  config.py  db.py  docker-compose.yml  flask_app.py  myweb100.com.conf  pyproject.toml  run.sh
nginx/: static.myweb100.com.conf
static/css/: base.css  index.css  user.css
static/js/: base.js  index.js  user_category.js  user_rss.js  user_website.js
static/js/site/: shopping.zh.js
static/js/user/: category.js  rss.js  website.js
task/: delete_not_exist_site_icon.py  delete_useless_image_and_site_icon.py  download_icon_redis_job.py  download_site_icon_async.py  download_url_icon.py  get_icon.py  index_rss.py  mail.py  new_index_rss.py  update_user_site_icon.py
task/sites/: alexa_chinaz_com.py  tool.py  top_chinaz_com.py
templates/: base.html  index.en.html  index.html  index.ja.html  index.zh.html  user.html  welcome.html
templates/shopping/: shopping.en.html  shopping.zh.html
translations/en/LC_MESSAGES/: messages.po
translations/ja/LC_MESSAGES/: messages.po
translations/zh/LC_MESSAGES/: messages.po
util/: check.py  mail.py  tool.py
worker/: __init__.py  auth.py  index.py  user.py
